[gd_scene load_steps=9 format=3 uid="uid://gawkn4eh06yq"]

[ext_resource type="Texture2D" uid="uid://bvgy86mcehkwh" path="res://Sprite/gray.png" id="1_pgwyu"]
[ext_resource type="Script" uid="uid://deinf4nv2qirs" path="res://Scripts/View/character_panel_view.gd" id="2_f0ey6"]
[ext_resource type="Texture2D" uid="uid://m37eon7lqvnp" path="res://Sprite/healer.png" id="3_vm1v6"]
[ext_resource type="Texture2D" uid="uid://dew582yw4vf23" path="res://Sprite/UnderHpbar.png" id="4_2j21y"]
[ext_resource type="Texture2D" uid="uid://cf6vni383ahr" path="res://Sprite/Hpbar.png" id="5_4g5uy"]
[ext_resource type="Script" uid="uid://d2obxg5ov6gqx" path="res://Scripts/View/health_bar_view.gd" id="6_aonjf"]
[ext_resource type="PackedScene" uid="uid://byn0xmh6porlj" path="res://Scenes/skill_icon.tscn" id="6_bev8g"]
[ext_resource type="Texture2D" uid="uid://c5iq2xw7en6gt" path="res://Sprite/Shiledbar.png" id="8_6r4g7"]

[node name="CharacterPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1670.0
offset_bottom = -695.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 250.0
offset_bottom = 385.0
texture = ExtResource("1_pgwyu")
script = ExtResource("2_f0ey6")

[node name="CharacterPortrait" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 225.0
texture = ExtResource("3_vm1v6")
flip_h = true

[node name="SkillIcon" parent="Panel" instance=ExtResource("6_bev8g")]
offset_top = 260.0
offset_right = 125.0
offset_bottom = 385.0

[node name="SkillIcon2" parent="Panel" instance=ExtResource("6_bev8g")]
offset_left = 125.0
offset_top = 260.0
offset_right = 165.0
offset_bottom = 300.0

[node name="HealthBar" type="Control" parent="Panel"]
anchors_preset = 0
offset_top = 230.0
offset_right = 40.0
offset_bottom = 270.0
script = ExtResource("6_aonjf")

[node name="UnderHpBar" type="TextureRect" parent="Panel/HealthBar"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 30.0
texture = ExtResource("4_2j21y")

[node name="HpBar" type="TextureRect" parent="Panel/HealthBar"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 30.0
texture = ExtResource("5_4g5uy")
expand_mode = 1

[node name="ShieldBar" type="TextureRect" parent="Panel/HealthBar"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 30.0
texture = ExtResource("8_6r4g7")
expand_mode = 1
